--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   application:
-    image: SpringAPP
+    image: employee-project
     ports:
       - "4041:4041"
     networks:
@@ -12,7 +12,7 @@ services:
       - /data/springboot-app
     
   mysqldb:
-    image: mysql:5.7
+    image: mysql
     networks:
       - springboot-db-net
     environment:
