Adding Latest Dockerfile

--- a/Dockerfile.txt
+++ b/Dockerfile.txt
@@ -1,4 +1,4 @@
 FROM openjdk:8
 EXPOSE 4041
 ADD target/SpringAPP.jar SpringAPP.jar
-ENTRYPOINT ["java","-jar","/SpringAPP.jar"]
+ENTRYPOINT ["java","-jar","SpringAPP.jar"]
