--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,14 +5,13 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://mysqldb:3306/emp
+    url: jdbc:mysql://localhost:3306/emp
     username: root
     password: root
   jpa:
     hibernate:
       ddl-auto: update
     show-sql: true
-    database-platform: org.hibernate.dialect.MySQL8Dialect
   mvc:
     view:
       prefix: /WEB-INF/pages/
